{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 47,
  "lineage": "f7b5aaff-c36d-3ede-cd50-ef4feef6057e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb3ce995089934c5",
            "domain": "vpc",
            "id": "eipalloc-0eb3ce995089934c5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-162-43.compute-1.amazonaws.com",
            "public_ip": "52.22.162.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-nat-eip",
              "Tool": "terragrunt-managed-resources"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:internet-gateway/igw-05a07504424f193f6",
            "id": "igw-05a07504424f193f6",
            "owner_id": "146406208958",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-igw",
              "Tool": "terragrunt-managed-resources"
            },
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb3ce995089934c5",
            "association_id": "eipassoc-0dda5e0aa5c1cfd19",
            "connectivity_type": "public",
            "id": "nat-0ed7c5f5685593e5d",
            "network_interface_id": "eni-053d69c46b4d76933",
            "private_ip": "10.0.1.111",
            "public_ip": "52.22.162.43",
            "subnet_id": "subnet-0dfda4ba666ab6713",
            "tags": {
              "Name": "dev-nat-gw"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-nat-gw",
              "Tool": "terragrunt-managed-resources"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd92321dffc7b6e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed7c5f5685593e5d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd92321dffc7b6e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rout",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a07504424f193f6",
            "id": "r-rtb-063d6627796724c581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063d6627796724c58",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rout",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:route-table/rtb-0cd92321dffc7b6e9",
            "id": "rtb-0cd92321dffc7b6e9",
            "owner_id": "146406208958",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-private-rt",
              "Tool": "terragrunt-managed-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:route-table/rtb-063d6627796724c58",
            "id": "rtb-063d6627796724c58",
            "owner_id": "146406208958",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-public-rt",
              "Tool": "terragrunt-managed-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb73dd289ea2d44c",
            "route_table_id": "rtb-0cd92321dffc7b6e9",
            "subnet_id": "subnet-00d80778f102b3db2"
          },
          "dependencies": [
            "aws_route_table.private_rout",
            "aws_subnet.eks_private_subnets",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05521b74b4e09ca60",
            "route_table_id": "rtb-0cd92321dffc7b6e9",
            "subnet_id": "subnet-0088d2e753f1e0936"
          },
          "dependencies": [
            "aws_route_table.private_rout",
            "aws_subnet.eks_private_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021ea12929800d70f",
            "route_table_id": "rtb-063d6627796724c58",
            "subnet_id": "subnet-0dfda4ba666ab6713"
          },
          "dependencies": [
            "aws_route_table.public_rout",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a859fdcf0f19ad8c",
            "route_table_id": "rtb-063d6627796724c58",
            "subnet_id": "subnet-04f0ac1b98d9be59a"
          },
          "dependencies": [
            "aws_route_table.public_rout",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:security-group/sg-0174951ab0efb28c7",
            "description": "Default security group for eks vpc",
            "egress": [],
            "id": "sg-0174951ab0efb28c7",
            "ingress": [],
            "name": "dev-default-sg",
            "name_prefix": "",
            "owner_id": "146406208958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-default-sg",
              "Tool": "terragrunt-managed-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-534945136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0174951ab0efb28c7",
            "security_group_rule_id": "sgr-0f8564be667c40dc6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default_group",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ing_http_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1622177933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0174951ab0efb28c7",
            "security_group_rule_id": "sgr-008d50ef456af229e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default_group",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ing_ssh_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3594134840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0174951ab0efb28c7",
            "security_group_rule_id": "sgr-0ea444ae7fea52e00",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default_group",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:subnet/subnet-00d80778f102b3db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d80778f102b3db2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146406208958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnets-us-east-1a"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-private-subnets-us-east-1a",
              "Tool": "terragrunt-managed-resources"
            },
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:subnet/subnet-0088d2e753f1e0936",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0088d2e753f1e0936",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146406208958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnets-us-east-1b"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-private-subnets-us-east-1b",
              "Tool": "terragrunt-managed-resources"
            },
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:subnet/subnet-0dfda4ba666ab6713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfda4ba666ab6713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146406208958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnets-us-east-1a"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-public-subnets-us-east-1a",
              "Tool": "terragrunt-managed-resources"
            },
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:subnet/subnet-04f0ac1b98d9be59a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f0ac1b98d9be59a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146406208958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnets-us-east-1b"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-public-subnets-us-east-1b",
              "Tool": "terragrunt-managed-resources"
            },
            "vpc_id": "vpc-044ceb671bf22d585"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146406208958:vpc/vpc-044ceb671bf22d585",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025a2bd66960f6041",
            "default_route_table_id": "rtb-06d12f2d9236e9063",
            "default_security_group_id": "sg-097267f3a699572cb",
            "dhcp_options_id": "dopt-0ec5a6ad814de3ec2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044ceb671bf22d585",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d12f2d9236e9063",
            "owner_id": "146406208958",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Application": "kubernets",
              "Name": "dev-vpc",
              "Tool": "terragrunt-managed-resources"
            }
          }
        }
      ]
    }
  ]
}